# zfp-par

./: .test.c.swp  CMakeLists.txt  build.sh  log  pyproject.toml  setup.py  test.c  test.f90  zfp.x
_skbuild/linux-x86_64-3.10/cmake-build/: CMakeCache.txt  CMakeSpec.json  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt  zfp-config.cmake  zfp-targets.cmake
_skbuild/linux-x86_64-3.10/cmake-build/CMakeTmp/link_flags/gnu_ld_ignore/MODULE/SHARED/src/: CMakeLists.txt
_skbuild/linux-x86_64-3.10/cmake-build/lib/: libzfp.so.1.0.1
_skbuild/linux-x86_64-3.10/cmake-build/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake  zfpy_c.c
_skbuild/linux-x86_64-3.10/cmake-build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_skbuild/linux-x86_64-3.10/cmake-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_skbuild/linux-x86_64-3.10/cmake-build/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_skbuild/linux-x86_64-3.10/cmake-build/zfpy/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_skbuild/linux-x86_64-3.10/cmake-install/lib/: libzfp.so.1.0.1
_skbuild/linux-x86_64-3.10/cmake-install/zfpy/: _zfp_par.py
fortran/: zfp.f90
include/: zfp.h
python/: CMakeLists.txt  __init__.py  zfp.py  zfpy.pyx  zfpy_c.pxd  zfpy_c.pyx
python/scikit-build-cmake/: FindCython.cmake  FindPythonExtensions.cmake
src/: zfp.c
src/share/: omp.c  parallel.c
src/template/: compress.c  decompress.c  encode.c  ompcompress.c
zfpy/: CMakeLists.txt  __init__.py  _zfp_par.py
zfpy.egg-info/: PKG-INFO  SOURCES.txt
