
dependencies=[
'cython>=0.22',
'numpy>=1.8.0']

[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "zfpy"
version = "1.0.2"
description="zfp compression in Python"
authors={ name="Peter Lindstrom, Danielle Asher", "email="zfp@llnl.gov"},

license = { text = "MIT License" }

