
dependencies=[
'cython>=0.22',
'numpy>=1.8.0',
'multiprocess']

[build-system]
requires = ["setuptools", "wheel", "scikit-build==0.17.6", "cmake", "Cython>=0.22","numpy>=1.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zfpy"
version = "1.0.2"
description="zfp compression in Python"
authors=[{ name="Peter Lindstrom, Danielle Asher", email="zfp@llnl.gov"}]

license = { text = "MIT License" }

